Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 		<title>Meal Prep</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://505aaron.github.io/MealPlanPage/css/main.css" />
-		<link rel="stylesheet" href="https://505aaron.github.io/MealPlanPage/css/project.css" />
+		<base href="https://505aaron.github.io/MealPlanPage/">
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/project.css" />
 		
-		<noscript><link rel="stylesheet" href="https://505aaron.github.io/MealPlanPage/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
 	</head>
 	
-			<script src="https://505aaron.github.io/MealPlanPage/js/jquery.min.js"></script>
+			<script src="js/jquery.min.js"></script>
 	<body>
 
     
@@ -133,9 +134,9 @@ Security
 			<div id="bg"></div>
 
 		
-			<script src="https://505aaron.github.io/MealPlanPage/js/skel.min.js"></script>
-			<script src="https://505aaron.github.io/MealPlanPage/js/util.js"></script>
-			<script src="https://505aaron.github.io/MealPlanPage/js/main.js"></script>
+			<script src="js/skel.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 			
 
 	</body>
