Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Meal Prep</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<base href="https://505aaron.github.io/MealPlanPage/">
+		<base href="https://505aaron.github.io/MealPrep/">
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/project.css" />
 		
