Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@ Security
 
 <p><h3>Your Choices</h3>
 <h4>Account Information</h4>
-<p>You may request that we update, correct or delete information about you at any time by emailing us at support@MealPlan.com, but note that we may retain certain information as required by law or for legitimate business purposes. We may also retain cached or archived copies of information about you for a certain period.
+<p>You may request that we update, correct or delete information about you at any time by emailing us at <a href="mailto:support@lessrework.com">support@lessrework.com</a>, but note that we may retain certain information as required by law or for legitimate business purposes. We may also retain cached or archived copies of information about you for a certain period.
 <h4>Push Notifications</h4>
 <p>With your consent, we may send push notifications or alerts to your mobile device to provide game-related information, service updates, promotional communications and other related messages. You can deactivate these notifications by changing your notification settings on your device.
 <h4>Storage of Information</h4>
 <p>MealPlan will store your information for as long as necessary in order to provide you with the App.
 <h3>Contact Us</h3>
-<p>If you have any questions about this Privacy Policy, please contact us at:support@MealPlan.com.</p>
+<p>If you have any questions about this Privacy Policy, please <a href="mailto:support@lessrework.com">contact us</a>.</p>
 
 </article>
 
