--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<base href="https://505aaron.github.io/MealPrep/">
+		<link rel="icon" href="images/icon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/project.css" />
 		
